* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 8.6.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 8.5.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Sep 07 2023 Steven Pritchard <steve@sicura.us> - 8.4.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.3.0
- Add RockyLinux 8 support

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.1.2
- Maintenance update for module assets

* Wed Sep 16 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.1-0
- Advertise OEL support in the metadata.json.

* Tue Mar 31 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
  - Fix missing `group_filter` option in LDAP
  - Add support for overriding post-auth in LDAP
  - Add support for overriding accounting in LDAP
  - Add support for specifying the entire file content
  - Fix OEL tests
  - Add support for simplib < 5

* Mon Aug 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.0-0
- Remove `simp_options::puppet::server` from the default lookup logic
  for `freeradius::v3::modules::ldap::server`. In systems that use Bolt
  to compile and apply manifests, that setting will not be available.
- Add types documentation

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.1-0
- Updated documentation
  - Cleaned up for `puppet strings`
  - Added REFERENCE.md
  - Updated README.md
- Switched all FIPS checks to use top level inherited checks
- Add Puppet 6 support

* Tue Mar 12 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.0.0-0
- Refactored API
- Strong typed all variables and updated functions for puppet 5 compatability.